--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   },
   "dependencies": {
     "@hapi/topo": "^6.0.2",
-    "@humanwhocodes/module-importer": "^1.0.1",
     "globby": "^13.2.2"
   },
   "devDependencies": {
@@ -66,6 +65,7 @@
     "c8": "^8.0.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "desm": "^1.3.0",
     "eslint": "^8.44.0",
     "eslint-plugin-es-x": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
