Fix type cleaning

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "check:tsc": "tsc",
     "check:type-coverage": "type-coverage --detail --strict --at-least 99 --ignore-files 'test/*'",
     "check": "run-s clean && run-p check:*",
-    "clean:declarations": "rm -rf $(find . -maxdepth 2 -type f -name '*.d.ts*' ! -name 'advanced-types.d.ts')",
+    "clean:declarations-top": "rm -rf $(find . -maxdepth 1 -type f -name '*.d.ts*' ! -name 'advanced-types.d.ts')",
+    "clean:declarations-lib": "rm -rf $(find lib -type f -name '*.d.ts*' ! -name 'advanced-types.d.ts')",
     "clean": "run-p clean:*",
     "prepare": "husky install",
     "prepublishOnly": "run-s build",
@@ -81,7 +82,7 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "husky": "^8.0.3",
     "installed-check": "^8.0.0",
-    "knip": "^2.15.2",
+    "knip": "^2.15.5",
     "mocha": "^10.2.0",
     "npm-run-all2": "^6.0.6",
     "sinon": "^15.2.0",
