--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "c8": "^8.0.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "chai-posix-path": "^1.0.0",
     "desm": "^1.3.0",
     "eslint": "^8.44.0",
     "eslint-plugin-es-x": "^7.1.0",
