--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clean": "run-p clean:*",
     "prepare": "husky install",
     "prepublishOnly": "run-s build",
-    "test:node": "c8 --reporter=lcov --reporter text node --test test/*.spec.js",
+    "test:node": "c8 --reporter=lcov --reporter text node --test",
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
   },
