--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clean": "run-p clean:*",
     "prepare": "husky install",
     "prepublishOnly": "run-s build",
-    "test:node": "c8 --reporter=lcov --reporter text node --test",
+    "test:node": "c8 --reporter=lcov --reporter text node --test --test-reporter=@voxpelli/node-test-pretty-reporter",
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
   },
@@ -64,6 +64,7 @@
     "@types/sinon": "^10.0.15",
     "@types/sinon-chai": "^3.2.9",
     "@voxpelli/eslint-config": "^18.0.0",
+    "@voxpelli/node-test-pretty-reporter": "^1.0.1",
     "@voxpelli/tsconfig": "^8.0.0",
     "c8": "^8.0.0",
     "chai": "^4.3.7",
@@ -82,7 +83,7 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "husky": "^8.0.3",
     "installed-check": "^8.0.0",
-    "knip": "^2.15.5",
+    "knip": "^2.17.0",
     "npm-run-all2": "^6.0.6",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
