Temporarily force linting to run on 18.17

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,3 +16,6 @@ permissions:
 jobs:
   lint:
     uses: voxpelli/ghatemplates/.github/workflows/lint.yml@main
+    with:
+      node-versions: '18.17.0'
+
