--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clean": "run-p clean:*",
     "prepare": "husky install",
     "prepublishOnly": "run-s build",
-    "test:node": "c8 --reporter=lcov --reporter text node --test --test-reporter=@voxpelli/node-test-pretty-reporter",
+    "test:node": "c8 --reporter=lcov --reporter text node --test",
     "test-ci": "run-s test:*",
     "test": "run-s check test:*"
   },
@@ -61,7 +61,6 @@
     "@types/node": "^18.17.1",
     "@types/sinon": "^10.0.16",
     "@voxpelli/eslint-config": "^19.0.0",
-    "@voxpelli/node-test-pretty-reporter": "^1.1.1",
     "@voxpelli/tsconfig": "^8.0.0",
     "c8": "^8.0.1",
     "eslint": "^8.46.0",
