--- a/package.json
+++ b/package.json
@@ -51,7 +51,17 @@
     "test": "run-s check test:*"
   },
   "peerDependencies": {
+    "@types/pg": "^8.10.2",
+    "pg": "^8.11.2",
     "umzug": "^3.2.1"
+  },
+  "peerDependenciesMeta": {
+    "@types/pg": {
+      "optional": true
+    },
+    "pg": {
+      "optional": true
+    }
   },
   "dependencies": {
     "globby": "^13.2.2",
@@ -59,6 +69,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.17.1",
+    "@types/pg": "^8.10.2",
     "@types/sinon": "^10.0.16",
     "@voxpelli/eslint-config": "^19.0.0",
     "@voxpelli/tsconfig": "^8.0.0",
@@ -75,8 +86,9 @@
     "eslint-plugin-unicorn": "^48.0.1",
     "husky": "^8.0.3",
     "installed-check": "^8.0.0",
-    "knip": "^2.17.2",
+    "knip": "^2.19.0",
     "npm-run-all2": "^6.0.6",
+    "pg": "^8.11.2",
     "sinon": "^15.2.0",
     "type-coverage": "^2.26.0",
     "typescript": "~5.1.6",
