--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "sinon": "^16.1.0",
     "type-coverage": "^2.26.3",
     "typescript": "~5.1.6",
-    "umzug": "^3.3.1"
+    "umzug": "^3.3.1",
+    "validate-conventional-commit": "^1.0.3"
   }
 }
