chore(deps): update husky and knip

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "clean:declarations-top": "rm -rf $(find . -maxdepth 1 -type f -name '*.d.ts*' ! -name 'index.d.ts')",
     "clean:declarations-lib": "rm -rf $(find lib -type f -name '*.d.ts*' ! -name '*-types.d.ts')",
     "clean": "run-p clean:*",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "run-s build",
     "test:node": "c8 --reporter=lcov --reporter text node --test",
     "test-ci": "run-s test:*",
@@ -86,9 +86,9 @@
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "installed-check": "^8.0.0",
-    "knip": "^2.30.1",
+    "knip": "^5.22.2",
     "npm-run-all2": "^6.1.1",
     "pg": "^8.11.2",
     "sinon": "^16.1.0",
