--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:0": "run-s clean",
     "build:1-declaration": "tsc -p declaration.tsconfig.json",
     "build": "run-s build:*",
-    "check:installed-check": "installed-check",
+    "check:installed-check": "installed-check -i @voxpelli/eslint-config -i eslint",
     "check:knip": "knip",
     "check:lint": "eslint --report-unused-disable-directives .",
     "check:tsc": "tsc",
@@ -73,19 +73,10 @@
     "@types/node": "^18.19.39",
     "@types/pg": "^8.10.3",
     "@types/sinon": "^17.0.3",
-    "@voxpelli/eslint-config": "^19.0.0",
+    "@voxpelli/eslint-config": "^20.0.0-beta.3",
     "@voxpelli/tsconfig": "^12.0.1",
     "c8": "^10.1.2",
-    "eslint": "^8.50.0",
-    "eslint-plugin-es-x": "^7.2.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-mocha": "^10.2.0",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint": "^9.5.0",
     "husky": "^9.0.11",
     "installed-check": "^9.3.0",
     "knip": "^5.22.2",
