--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -2,7 +2,8 @@
   "$schema": "https://unpkg.com/knip@5/schema.json",
   "entry": [
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "lib/advanced-types.d.ts"
   ],
   "ignoreDependencies": ["@types/pg", "pg"]
 }
