--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:0": "run-s clean",
     "build:1-declaration": "tsc -p declaration.tsconfig.json",
     "build": "run-s build:*",
-    "check:installed-check": "installed-check -i @voxpelli/eslint-config -i eslint",
+    "check:installed-check": "installed-check -i @voxpelli/eslint-config -i eslint -i npm-run-all2",
     "check:knip": "knip",
     "check:lint": "eslint --report-unused-disable-directives .",
     "check:tsc": "tsc",
@@ -70,21 +70,21 @@
     "plugin-importer": "^0.1.1"
   },
   "devDependencies": {
-    "@types/node": "^18.19.44",
+    "@types/node": "^18.19.65",
     "@types/pg": "^8.11.6",
     "@types/sinon": "^17.0.3",
-    "@voxpelli/eslint-config": "^20.0.1",
-    "@voxpelli/tsconfig": "^13.0.0",
+    "@voxpelli/eslint-config": "^22.1.0",
+    "@voxpelli/tsconfig": "^15.1.0",
     "c8": "^10.1.2",
     "eslint": "^9.9.0",
     "husky": "^9.1.4",
     "installed-check": "^9.3.0",
     "knip": "^5.27.2",
-    "npm-run-all2": "^6.2.2",
+    "npm-run-all2": "^7.0.1",
     "pg": "^8.12.0",
     "sinon": "^18.0.0",
-    "type-coverage": "^2.29.1",
-    "typescript": "~5.5.4",
+    "type-coverage": "^2.29.7",
+    "typescript": "~5.7.2",
     "umzug": "^3.8.1",
     "validate-conventional-commit": "^1.0.4"
   }
