--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,5 +17,5 @@ jobs:
   test:
     uses: voxpelli/ghatemplates/.github/workflows/test.yml@main
     with:
-      node-versions: '18,20'
-      os: 'ubuntu-latest,windows-latest'
+      node-versions: '18,20,22,23'
+      os: 'ubuntu-latest'
