--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,4 +18,4 @@ jobs:
     uses: voxpelli/ghatemplates/.github/workflows/test.yml@main
     with:
       node-versions: '18,20,22,23'
-      os: 'ubuntu-latest'
+      os: 'ubuntu-latest,windows-latest'
